--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="robots" content="nofollow" />
     <meta name="description" content="Comandos Git, aprenda Git do básico ao avançado com tutorial para Windows, Mac e Linux (Ubuntu) usando as principais ferramentas como GitHub, BitBucket e GitLab">
     <meta name="keywords" content="git branch, git commit, git remote, comandos git, github, git merge, windows, mac, bitbucket, git, linux, ubuntu, debian, controle de verão, git add, git pull, git push, git remote">
-    <link rel="canonical" href="http://comandosgit.github.io/">
+    <link rel="canonical" href="https://comandosgit.github.io/">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -35,7 +35,7 @@
                     <br>
                     <div class="col-xs-2">
                         <div class="row">
-                            <a href="http://comandosgit.github.io/" title="Comandos Git - Aprenda Git do básico ao avançado">
+                            <a href="https://comandosgit.github.io/" title="Comandos Git - Aprenda Git do básico ao avançado">
                                 <img class="center" src="img/comandos-git.png" alt="ComandosGit">
                             </a>
                         </div>
@@ -78,16 +78,16 @@
                                         <p>Instalar o Git no Windows é muito fácil. O projeto msysgit tem um dos procedimentos mais simples de instalação. Simplesmente baixe o arquivo exe do instalador a partir da página do GitHub e execute-o:
                                         </p>
 
-                                        <div class="well well-sm"><a href="http://msysgit.github.com" title="Instalar Git no Windows">http://msysgit.github.com</a>
+                                        <div class="well well-sm"><a href="https://msysgit.github.com" title="Instalar Git no Windows">https://msysgit.github.com</a>
                                         </div>
                                         <p>Após concluir a instalação, você terá tanto uma versão command line (linha de comando, incluindo um cliente SSH que será útil depois) e uma GUI padrão.</p>
                                     </div>
                                     <div class="tab-pane fade" id="mac">
                                         <p>Existem duas formas fáceis de se instalar Git em um Mac. A mais fácil delas é usar o instalador gráfico do Git, que você pode baixar da página do SourceForge:</p>
 
-                                        <div class="well well-sm"><a href="http://sourceforge.net/projects/git-osx-installer/" title="Instalar Git no Mac">http://sourceforge.net/projects/git-osx-installer/</a>
+                                        <div class="well well-sm"><a href="https://sourceforge.net/projects/git-osx-installer/" title="Instalar Git no Mac">https://sourceforge.net/projects/git-osx-installer/</a>
                                         </div>
-                                        <p>A outra forma comum é instalar o Git via MacPorts (<a href="http://www.macports.org" title="MacPorts">http://www.macports.org</a>). Se você tem o MacPOrts instalado, instale o Git via</p>
+                                        <p>A outra forma comum é instalar o Git via MacPorts (<a href="https://www.macports.org" title="MacPorts">https://www.macports.org</a>). Se você tem o MacPOrts instalado, instale o Git via</p>
 
                                         <div class="well well-sm">sudo port install git-core +svn +doc +bash_completion +gitweb</div>
                                     </div>
@@ -1040,7 +1040,7 @@
                 <div class="row">
                     <div class="col-xs-12">Developed by:<a href="https://github.com/rafaelstz" title="Rafael Corrêa Gomes">Rafael Corrêa Gomes</a>
                     </div>
-                    <div class="col-xs-12">&copy;2016 <a href="http://comandosgit.github.io/">Comandosgit.github.io</a></div>
+                    <div class="col-xs-12">&copy;2016 <a href="https://comandosgit.github.io/">Comandosgit.github.io</a></div>
                     <div class="col-xs-12"><a href="/license.html">License MIT</a></div>
                 </div>
             </div>
@@ -1049,9 +1049,9 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4ea006db0c8d27d6"></script>
+    <script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4ea006db0c8d27d6"></script>
     <script type="text/javascript">
         $('body').scrollspy({
             target: '.navbar'
